@@ -7,6 +7,7 @@ Changelog
 - Always raise when viewlet rendering errors occur during development. [deiferni]
 - Rename label and values of the privacy layer field. [phgross]
 - Add configuration possibility, to blacklist mimetypes from archival conversion. [phgross]
+- Do no longer render `None` value in document description. [elioschmutz]
 - Prevent copy / paste of checked out documents. [njohner]
 - Bump ftw.solr to 2.6.1 to get fix path_depth handling. [phgross]
 - Handle special characters in link to advanced search. [njohner]
